# RDownloader

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release.ps1
GUI/: App.config  App.xaml  App.xaml.cs  Aria2Dto.cs  Aria2Methods.cs  Aria2RpcServer.cs  ConnectionDetailsViewModel.cs  DebugLogWindow.cs  DebugLogger.cs  DnsItem.cs  DownloadPage.xaml  DownloadPage.xaml.cs  DownloadSettings.cs  EndpointItem.cs  FileEndpointGroup.cs  GUI.csproj  GUI.slnx  GuiConfig.cs  KeyValueItem.cs  MainWindow.xaml  MainWindow.xaml.cs  NewListItem.cs  NewListPage.xaml  NewListPage.xaml.cs  NewPage.xaml  NewPage.xaml.cs  RDownloaderManager.cs  RdownConfig.cs  RelayCommand.cs  SelectEndpointPage.xaml  SelectEndpointPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  TaskRecord.cs  TaskRecordManager.cs  packages.config
GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
GUI/Themes/: Generic.xaml
src/: config.rs  main.rs  remote_file.rs  utils.rs
src/cli/: commands.rs  manager.rs  mod.rs  parser.rs  state.rs
src/dns/: dns_client.rs  dns_message.rs  doh_dns_client.rs  mix_dns_client.rs  mod.rs  system_dns_client.rs  udp_dns_client.rs
src/downloader/: allocator.rs  connection.rs  handle.rs  mod.rs  retry.rs  scheduler.rs  state.rs
src/endpoint_test/: connectivity_test.rs  endpoint.rs  mod.rs  speed_test.rs
